[package]
name = "rncryptor"
version = "0.1.0"
authors = ["Alfredo Di Napoli <alfredo.dinapoli@gmail.com>"]
repository = "https://github.com/RNCryptor/rncryptor-rs.git"
documentation = "https://docs.rs/rncryptor/"
description = "Rust implementation of the RNCryptor AES file format"
homepage = "http://rncryptor.github.io/"
readme = "README.md"
license = "MIT"

[dependencies]
rust-crypto = "0.2.36"
fastpbkdf2 = "0.1.0"
rand = "0.8.5"

[dev-dependencies]
rustc-serialize = "0.3"
quickcheck = "1.0.3"